@@ -21,6 +21,7 @@ import org.junit.jupiter.api.Test;
 import org.mockito.*;
 import org.springframework.kafka.core.KafkaTemplate;
 
+import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
@@ -100,6 +101,11 @@ class InvestigationServiceTest {
         transformer.setInvestigationNotificationsOutputTopicName(notificationTopicOutput);
         transformer.setInterviewOutputTopicName(interviewTopicOutput);
         transformer.setContactOutputTopicName(contactTopicOutput);
+        transformer.setPageCaseAnswerOutputTopicName("pageCaseAnswer");
+        transformer.setInvestigationCaseManagementTopicName("investigationCaseManagement");
+        transformer.setInterviewAnswerOutputTopicName("interviewAnswer");
+        transformer.setInterviewNoteOutputTopicName("interviewNote");
+        transformer.setRdbMetadataColumnsOutputTopicName("metadataColumns");
     }
 
     @AfterEach
@@ -114,8 +120,8 @@ class InvestigationServiceTest {
 
         final Investigation investigation = constructInvestigation(investigationUid);
         when(investigationRepository.computeInvestigations(String.valueOf(investigationUid))).thenReturn(Optional.of(investigation));
-        when(kafkaTemplate.send(anyString(), anyString(), anyString())).thenReturn(CompletableFuture.completedFuture(null));
-
+        when(kafkaTemplate.send(anyString(), anyString(), isNull())).thenReturn(CompletableFuture.completedFuture(null));
+        when(kafkaTemplate.send(anyString(), anyString(), notNull())).thenReturn(CompletableFuture.completedFuture(null));
         validateInvestigationData(payload, investigation);
 
         verify(investigationRepository).computeInvestigations(String.valueOf(investigationUid));
@@ -169,7 +175,7 @@ class InvestigationServiceTest {
         String invalidPayload = "{\"payload\": {\"after\": {}}}";
         RuntimeException ex = assertThrows(RuntimeException.class,
                 () -> investigationService.processMessage(invalidPayload, notificationTopic, consumer));
-        assertEquals(ex.getCause().getClass(), NoSuchElementException.class);
+        assertEquals(NoSuchElementException.class, ex.getCause().getClass());
     }
 
     @Test
@@ -186,9 +192,10 @@ class InvestigationServiceTest {
         Long interviewUid = 234567890L;
         String payload = "{\"payload\": {\"after\": {\"interview_uid\": \"" + interviewUid + "\"}}}";
 
-        final gov.cdc.etldatapipeline.investigation.repository.model.dto.Interview interview = constructInterview(interviewUid);
+        final Interview interview = constructInterview(interviewUid);
         when(interviewRepository.computeInterviews(String.valueOf(interviewUid))).thenReturn(Optional.of(interview));
         when(kafkaTemplate.send(anyString(), anyString(), anyString())).thenReturn(CompletableFuture.completedFuture(null));
+        when(kafkaTemplate.send(anyString(), anyString(), isNull())).thenReturn(CompletableFuture.completedFuture(null));
 
         investigationService.processMessage(payload, interviewTopic, consumer);
 
@@ -202,10 +209,9 @@ class InvestigationServiceTest {
                         verify(kafkaTemplate, times(6)).send(topicCaptor.capture(), keyCaptor.capture(), messageCaptor.capture())
                 );
 
-        String actualTopic = topicCaptor.getAllValues().get(0);
-        String actualKey = keyCaptor.getAllValues().get(0);
-        String actualValue = messageCaptor.getAllValues().get(0);
-
+        String actualTopic = topicCaptor.getAllValues().getFirst();
+        String actualKey = keyCaptor.getAllValues().getFirst();
+        String actualValue = messageCaptor.getAllValues().getFirst();
 
         var actualInterviewKey = objectMapper.readValue(
                 objectMapper.readTree(actualKey).path("payload").toString(), InterviewReportingKey.class);
@@ -224,7 +230,7 @@ class InvestigationServiceTest {
         String invalidPayload = "{\"payload\": {\"after\": {}}}";
         RuntimeException ex = assertThrows(RuntimeException.class,
                 () -> investigationService.processMessage(invalidPayload, interviewTopic, consumer));
-        assertEquals(ex.getCause().getClass(), NoSuchElementException.class);
+        assertEquals(NoSuchElementException.class, ex.getCause().getClass());
     }
 
     @Test
@@ -258,10 +264,9 @@ class InvestigationServiceTest {
                         verify(kafkaTemplate, times(3)).send(topicCaptor.capture(), keyCaptor.capture(), messageCaptor.capture())
                 );
 
-        String actualTopic = topicCaptor.getAllValues().get(0);
-        String actualKey = keyCaptor.getAllValues().get(0);
-        String actualValue = messageCaptor.getAllValues().get(0);
-
+        String actualTopic = topicCaptor.getAllValues().getFirst();
+        String actualKey = keyCaptor.getAllValues().getFirst();
+        String actualValue = messageCaptor.getAllValues().getFirst();
 
         var actualContactKey = objectMapper.readValue(
                 objectMapper.readTree(actualKey).path("payload").toString(), ContactReportingKey.class);
@@ -293,7 +298,7 @@ class InvestigationServiceTest {
         String invalidPayload = "{\"payload\": {\"after\": {}}}";
         RuntimeException ex = assertThrows(RuntimeException.class,
                 () -> investigationService.processMessage(invalidPayload, contactTopic, consumer));
-        assertEquals(ex.getCause().getClass(), NoSuchElementException.class);
+        assertEquals(NoSuchElementException.class, ex.getCause().getClass());
     }
 
     @Test
@@ -312,9 +317,19 @@ class InvestigationServiceTest {
 
         verify(kafkaTemplate, times(18)).send(topicCaptor.capture(), keyCaptor.capture(), messageCaptor.capture());
 
-        String actualTopic = topicCaptor.getAllValues().get(15);
-        String actualKey = keyCaptor.getAllValues().get(15);
-        String actualValue = messageCaptor.getAllValues().get(15);
+        String actualTopic = null;
+        String actualKey = null;
+        String actualValue = null;
+
+        List<String> topics = topicCaptor.getAllValues();
+        for (int i = 0; i < topics.size(); i++) {
+            if (topics.get(i).equals(investigationTopicOutput)) {
+                actualTopic = topics.get(i);
+                actualKey = keyCaptor.getAllValues().get(i);
+                actualValue = messageCaptor.getAllValues().get(i);
+                break;
+            }
+        }
 
         var actualReporting = objectMapper.readValue(
                 objectMapper.readTree(actualValue).path("payload").toString(), InvestigationReporting.class);
